Initial commit: Capacitor app + Fastlane + GitHub Actions

--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.oldetymehealth.app",
+  "appId": "com.oldetymehealth.tracker2",
   "appName": "OldeTyme Health",
   "webDir": "dist"
 }
